<resources>
    <string name="app_name">Projeto A3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="continue_">Continue</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Not a valid password</string>
    <string name="login_failed">Login failed</string>
    <string name="register">Do not have an account? Register</string>
    <string name="name">Name</string>
    <string name="user_id">User id</string>
    <string name="telephone">Telephone</string>
    <string name="user_info">User info</string>
    <string name="basic_info">Basic info</string>
    <string name="address">Address</string>
    <string name="street">Street</string>
    <string name="address_number">Number</string>
    <string name="address_line">Address Line</string>
    <string name="district">District</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="save">Save</string>
    <string name="search">Search...</string>
    <string name="add_frequency">Add frequency</string>
    <string name="frequency">Frequency</string>
    <string name="send">Send</string>
    <string name="scroll_down_city">Scroll to view more cities</string>
    <string name="change_password">Change password</string>
    <string name="logout">Logout</string>
    <string name="products">Products</string>
    <string name="cart_items">Cart items</string>
    <string name="finalize_purchase">Finalize purchase</string>purchase_completed
    <string name="purchase_completed">Purchase completed</string>
    <string name="total_quantity">Total quantity of items: </string>
    <string name="add_item_cart">Add at least one item to the cart </string>
    <string name="shopping">Shopping</string>
</resources>