<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_produtos"
            android:icon="@drawable/carrinho"
            android:title="@string/products" />
        <item
            android:id="@+id/nav_dados_usuario"
            android:icon="@drawable/usuario"
            android:title="@string/user_info" />
        <item
            android:id="@+id/nav_configuracoes"
            android:icon="@drawable/configuracoes"
            android:title="@string/action_settings" />

        <item
            android:id="@+id/nav_sair"
            android:icon="@drawable/sair"
          android:title="@string/logout" />
    </group>
</menu>