<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_produtos">

    <fragment
        android:id="@+id/nav_produtos"
        android:name="com.example.projetoa3.Fragmentos.FraProdutos"
        android:label="@string/products"
        tools:layout="@layout/fra_produtos" />

    <fragment
        android:id="@+id/nav_dados_usuario"
        android:name="com.example.projetoa3.Fragmentos.FraDadosUsuario"
        android:label="@string/user_info"
        tools:layout="@layout/fra_dados_usuario" />

    <fragment
        android:id="@+id/nav_configuracoes"
        android:name="com.example.projetoa3.Fragmentos.FraConfiguracoes"
        android:label="@string/action_settings"
        tools:layout="@layout/fra_configuracoes" />
</navigation>